# ezflt

./: .gitignore  LICENSE  README.md  README_HYDRA_WANDB.md  config.py  example.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_wandb_manual.py
configs/: config.yaml
configs/experiment/: default.yaml  sweep.yaml
docs/: README.md  contributing.md  examples.md  getting_started.md  index.md
docs/api/: callbacks.md  data.md  model.md  plot.md  task.md  tracker.md  trainer.md
examples/: basic_usage.py  hydra_wandb_example.py  simple_single_experiment.py  single_experiment.py  train_with_hydra.py  train_with_hydra_simple.py
models/: shallow_networks.py
src/: model.py  plot.py
src/ezflt/: __init__.py  callbacks.py  data.py  experiment.py  model.py  plot.py  task.py  tracker.py  trainer.py
tests/: README.md  __init__.py  conftest.py  test_data.py  test_experiment.py  test_hydra_integration.py  test_model.py  test_tracker.py  test_trainer_experiment.py  test_wandb_integration.py
